This section is the continuation till Iterating Nodelist with loops

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -6,14 +6,16 @@
     <title>DOM</title>
 </head>
 <body>
+    <div id="container">  
 
     <h1 id="title">Hello</h1>
     <p class="desc">Welcome to DOM</p>
     <ul>
-        <li>Apple</li>
-        <li>Banans</li>
-        <li>Mango</li>
+        <li class="fruit">Apple</li>
+        <li class="fruit">Banans</li>
+        <li class="fruit">Mango</li>
     </ul>
+    </div>
 
 
     <script src="script.js" ></script>
