This Section contains Read Properties, Edit Text Safely, Classes and Styles

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DOM</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">  
@@ -16,6 +17,12 @@
         <li class="fruit">Mango</li>
     </ul>
     </div>
+
+    <h2 id="title1">Hello I am </h2>
+    <p id="para">Original paragraph</p>
+
+    <div id="box">Hello DOM</div>
+
 
 
     <script src="script.js" ></script>
