From here you will come to know about the Events in Javascript

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -21,7 +21,22 @@
     <h2 id="title1">Hello I am </h2>
     <p id="para">Original paragraph</p>
 
-    <div id="box">Hello DOM</div>
+    <div id="box">Hello DOM</div> <br>
+
+    <!-- <button>click me</button> -->
+
+    <p id="text"> Hello</p>
+    <button id="changeBtn">Change Text</button>
+
+    <form action="">
+        <input type="text" placeholder="Enter text" id="inp">
+    </form>
+
+    <!-- Example: Form Submit -->
+     <form id="myForm">
+        <input type="text" required>
+        <button type="submit">Submit</button>
+     </form>
 
 
 
